Aplicando ajustes de textos no jade e corrigindo telas de recuperação de senha

--- a/web/src/home_features.jade
+++ b/web/src/home_features.jade
@@ -19,7 +19,7 @@ section.features#features
 
             img.more(src="/images/icon_more.png")
           .item__back
-            p Em uma situação de emergencia é possivel enviar fotos câmera ferontal e traseira e gravação de audio de 5s para todos os membros do grupo.
+            p Em uma situação de emergência é possivel enviar fotos da câmera frontal e traseira, além da gravação de áudio de 5 segundos para todos os membros do grupo.
 
             img.minus(src="/images/icon_minus.png")
 
@@ -34,7 +34,7 @@ section.features#features
 
             img.more(src="images/icon_more.png")
           .item__back
-            p É possivel veriica nivel de bateira, sinal e beloiade, de cada um dos membros individualmente, vbem como o endereço atual
+            p É possivel verificar o nível de bateria, sinal e velocidade de cada um dos membros individualmente, bem como o endereço atual.
 
             img.minus(src="/images/icon_minus.png")
 
@@ -64,7 +64,7 @@ section.features#features
 
             img.more(src="/images/icon_more.png")
           .item__back
-            p É possível definir uma área no mapa de entradas e saídas dos membros de seus grupos
+            p Receba um alerta sempre que um membro do seu grupo adentrar ou sair de um perímetro geográfico escolhido por você.
 
             img.minus(src="/images/icon_minus.png")
 
@@ -140,7 +140,7 @@ section.features#features
 
             img.more(src="/images/icon_more.png")
           .item__back
-            p Veja onde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
+            p Veja aonde os membros do seu grupo estiveram, dia após dia, com o histórico de posições.
 
             img.minus(src="/images/icon_minus.png")
 
@@ -157,6 +157,6 @@ section.features#features
 
             img.more(src="/images/icon_more.png")
           .item__back
-            p Além de acessar via Mobile, você também pode acessá-lo pelo seu navegador preferido. 
+            p Além de acessar via Smartphone, você também pode ter acesso ao Family 24h pelo seu navegador preferido de qualquer computador, com acesso à Internet.
 
             img.minus(src="/images/icon_minus.png")
