--- a/web/src/index.jade
+++ b/web/src/index.jade
@@ -85,19 +85,19 @@ html(lang="pt-BR")
 
                 .col-xs-12.col-sm-8.col-md-7
                   img(src="images/premium_logo.png").img-responsive
-                  p.text <strong>Family24h</strong> é um aplicativo mobile que permite o monitoramento familiar, no qual você tem acesso, on line, a localização dos aparelhos cadastrados, através de um mapa interativo.
+                  p.text Com o <strong>Family24h Premium</strong> é possível inserir membros em seu grupo e ter acesso, em tempo real, a um mapa interativo que mostra a posição exata de cada membro e todas as funcionalidades do aplicativo.
 
                   ul
                     li
-                      p Direct emergency responders to your location
+                      p Mapa interativo em tempo real
                     li
-                      p Give you personalized crisis care
+                      p Alerta de pânico
                     li
-                      p Direct you to the nearest gas station
+                      p Alerta de perímetros
                     li
-                      p Access your emergency profile
+                      p Monitoramento de aparelhos perdidos ou roubados
 
-                  a(class="btn btn-default baixar" href="download.html" role="button") Não perca, baixe agora!
+                  a(class="btn btn-default baixar" href="download" role="button") Não perca, baixe agora!
             .item.free
               .row
                 .col-sm-4.col-md-5.hidden-xs
@@ -105,19 +105,15 @@ html(lang="pt-BR")
 
                 .col-xs-12.col-sm-8.col-md-7
                   img(src="images/free_logo.png").img-responsive
-                  p.text <strong>Family24h</strong> é um aplicativo mobile que permite o monitoramento familiar, no qual você tem acesso, on line, a localização dos aparelhos cadastrados, através de um mapa interativo.
+                  p.text <strong>Family24h Free</strong> permite ao usuário testar as funcionalidades de monitoramento em tempo real e segurança para seu próprio aparelho celular.
 
                   ul
                     li
-                      p Direct emergency responders to your location
+                      p Mapa interativo em tempo real
                     li
-                      p Give you personalized crisis care
-                    li
-                      p Direct you to the nearest gas station
-                    li
-                      p Access your emergency profile
+                      p Monitoramento de aparelhos perdidos ou roubados
 
-                  a(class="btn btn-default baixar" href="download.html" role="button") Não perca, baixe agora!
+                  a(class="btn btn-default baixar" href="download" role="button") Não perca, baixe agora!
 
           .left.carousel-control(href="#myCarousel" role="button" data-slide="prev")
             span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
