--- a/web/src/password/change/index.jade
+++ b/web/src/password/change/index.jade
@@ -7,6 +7,8 @@ section.main(role="password_change")
         h3.title__header Login
         small.title__tagline Alterar senha
 
+      .alert
+      
       form(name="pass_change_form")
         .form__field.email
           label(for="email") Email
