Mudanças no header do dashboard com fundo e borda superior

--- a/web/src/layout/header.jade
+++ b/web/src/layout/header.jade
@@ -10,7 +10,7 @@ html(lang="pt-BR")
         link(rel="apple-touch-icon" href="apple-touch-icon.png")
 
         <!-- Place favicon.ico in the root directory -->
-        link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
+        link(rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon")
 
         link(rel="stylesheet" href="/styles/internal.min.css")
 
@@ -22,7 +22,9 @@ html(lang="pt-BR")
         .top
           .logo
             a(href="/dashboard")
-              img(src="/images/logo-negativo.svg")
+              img(src="/images/logo-positivo.svg")
+          .int-page-title
+            h2 Painel de Controle
           .user-buttons
             .user-messages.glyphicon.glyphicon-comment
               .counter
