--- a/web/src/layout/header_interna.jade
+++ b/web/src/layout/header_interna.jade
@@ -10,7 +10,7 @@ doctype html
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
 
     <!-- Place favicon.ico in the root directory -->
-    link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
+    link(rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon")
 
     link(rel="stylesheet" href="/styles/style.css")
 
