--- a/styles/jquery-ui.css
+++ b/styles/jquery-ui.css
@@ -42,7 +42,7 @@ input.ui-button{padding:.4em 1em}
 .ui-buttonset .ui-button{margin-left:0;margin-right:-.3em}
 button.ui-button::-moz-focus-inner,input.ui-button::-moz-focus-inner{border:0;padding:0}
 .ui-datepicker{width:17em;padding:.2em .2em 0;display:none}
-.ui-datepicker .ui-datepicker-header{position:relative;padding:.2em 0}
+.ui-datepicker .ui-datepicker-header{position:relative;padding:.2em 0;border-bottom:1px solid #e2e2e2}
 .ui-datepicker .ui-datepicker-next,.ui-datepicker .ui-datepicker-next-hover,.ui-datepicker .ui-datepicker-prev,.ui-datepicker .ui-datepicker-prev-hover{position:absolute;top:2px;width:1.8em;height:1.8em}
 .ui-datepicker .ui-datepicker-prev{left:2px}
 .ui-datepicker .ui-datepicker-next{right:2px}
@@ -54,9 +54,10 @@ button.ui-button::-moz-focus-inner,input.ui-button::-moz-focus-inner{border:0;pa
 .ui-datepicker select.ui-datepicker-month-year{width:100%}
 .ui-datepicker select.ui-datepicker-month,.ui-datepicker select.ui-datepicker-year{width:49%}
 .ui-datepicker table{width:100%;font-size:.9em;border-collapse:collapse;margin:0 0 .4em}
-.ui-datepicker th{padding:.7em .3em;text-align:center;font-weight:700;border:0}
-.ui-datepicker td{border:0;padding:1px}
-.ui-datepicker td a,.ui-datepicker td span{display:block;padding:.2em;text-align:right;text-decoration:none}
+.ui-datepicker th{padding:.7em .3em;text-align:center;font-weight:lighter;border:0;color:#999}
+.ui-datepicker td{border:0;padding:1px;text-align:center}
+.ui-datepicker td a,.ui-datepicker td span{display:block;padding:.2em;text-align:center;text-decoration:none;width:25.35px;height:25.35px}
+.ui-datepicker td a{display:inline-block}
 .ui-datepicker .ui-datepicker-buttonpane{background-image:none;margin:.7em 0 0;padding:0 .2em;border-left:0;border-right:0;border-bottom:0}
 .ui-datepicker .ui-datepicker-buttonpane button{float:right;margin:.5em .2em .4em;cursor:pointer;padding:.2em .6em .3em;width:auto;overflow:visible}
 .ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current{float:left}
@@ -69,6 +70,8 @@ button.ui-button::-moz-focus-inner,input.ui-button::-moz-focus-inner{border:0;pa
 .ui-datepicker-multi .ui-datepicker-group-last .ui-datepicker-header,.ui-datepicker-multi .ui-datepicker-group-middle .ui-datepicker-header{border-left-width:0}
 .ui-datepicker-multi .ui-datepicker-buttonpane{clear:left}
 .ui-datepicker-row-break{clear:both;width:100%;font-size:0}
+.ui-datepicker-unselectable.ui-state-disabled{text-align:center}
+.ui-datepicker-unselectable.ui-state-disabled span{display:inline-block}
 .ui-datepicker-rtl{direction:rtl}
 .ui-datepicker-rtl .ui-datepicker-prev{right:2px;left:auto}
 .ui-datepicker-rtl .ui-datepicker-next{left:2px;right:auto}
@@ -118,10 +121,10 @@ button.ui-button::-moz-focus-inner,input.ui-button::-moz-focus-inner{border:0;pa
 .ui-selectable-helper{position:absolute;z-index:100;border:1px dotted #000}
 .ui-slider{position:relative;text-align:left}
 .ui-slider .ui-slider-handle{position:absolute;z-index:2;width:.8em;height:.8em;cursor:default;background:#32ccfe!important;border:none!important;box-shadow:0 0 0 12px rgba(50,204,254,.5)}
-.ui-slider .ui-slider-range{position:absolute;z-index:1;font-size:.7em;display:block;border:0;background:#32ccfe}
+.ui-slider .ui-slider-range{position:absolute;z-index:1;font-size:.7em;display:block;background:#32ccfe;border:.18em solid #32ccfe}
 .ui-slider .ui-slider-handle:active,.ui-slider .ui-slider-handle:focus{outline:0;background:#32ccfe}
 .ui-slider.ui-state-disabled .ui-slider-handle,.ui-slider.ui-state-disabled .ui-slider-range{filter:inherit}
-.ui-slider-horizontal{height:.3em}
+.ui-slider-horizontal{height:.15em}
 .ui-slider-horizontal .ui-slider-handle{top:-.25em;margin-left:-.6em;border-radius:100%}
 .ui-slider-horizontal .ui-slider-range{top:0;height:100%}
 .ui-slider-horizontal .ui-slider-range-min{left:0}
@@ -156,12 +159,13 @@ body .ui-tooltip{border-width:2px}
 .ui-widget-content a{color:#222}
 .ui-widget-header{color:#222;font-weight:700}
 .ui-widget-header a{color:#222}
-.ui-state-default,.ui-widget-content .ui-state-default,.ui-widget-header .ui-state-default{border:1px solid #d3d3d3;background:#e6e6e6 url(images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x;font-weight:400;color:#555}
+.ui-state-default,.ui-widget-content .ui-state-default,.ui-widget-header .ui-state-default{font-weight:400;color:#555}
 .ui-state-default a,.ui-state-default a:link,.ui-state-default a:visited{color:#555;text-decoration:none}
 .ui-state-hover a,.ui-state-hover a:hover,.ui-state-hover a:link,.ui-state-hover a:visited{color:#212121;text-decoration:none}
 .ui-state-active,.ui-widget-content .ui-state-active,.ui-widget-header .ui-state-active{border:1px solid #aaa;background:#fff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x;font-weight:400;color:#212121}
 .ui-state-active a,.ui-state-active a:link,.ui-state-active a:visited{color:#212121;text-decoration:none}
-.ui-state-highlight,.ui-widget-content .ui-state-highlight,.ui-widget-header .ui-state-highlight{border:1px solid #fcefa1;background:#fbf9ee url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x;color:#363636}
+.ui-datepicker-current-day .ui-state-active,.ui-datepicker-current-day .ui-state-active:active,.ui-datepicker-current-day .ui-state-active:focus{border:1px solid #32ccfe;border-radius:100%}
+.ui-state-highlight,.ui-widget-content .ui-state-highlight,.ui-widget-header .ui-state-highlight{border:1px solid #32ccfe;background:#32ccfe;color:#fff;border-radius:100%}
 .ui-state-highlight a,.ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a{color:#363636}
 .ui-state-error,.ui-widget-content .ui-state-error,.ui-widget-header .ui-state-error{border:1px solid #cd0a0a;background:#fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x;color:#cd0a0a}
 .ui-state-error a,.ui-state-error-text,.ui-widget-content .ui-state-error a,.ui-widget-content .ui-state-error-text,.ui-widget-header .ui-state-error a,.ui-widget-header .ui-state-error-text{color:#cd0a0a}
